achieved to render inputvalue in HTML

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <form action="">
       <input class="js-input-search" type="text" name="" id="" placeholder="Search a tv show">
       <button class="js-btn-search">Buscar</button>
-      <div class="js-form-list"></div>
     </form>
+    <section class="js-form-list"></section>
     <section class="js-fav-list"></section>
   </main>
   <script src="./js/main.js"></script>
