achived to print undefineds on favourite list

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <input class="js-input-search" type="text" name="" id="" placeholder="Search a tv show">
       <button class="js-btn-search">Buscar</button>
     </form>
+    <h2>Results:</h2>
     <section class="js-form-list"></section>
+    <h2> You favourite TV shows:</h2>
     <section class="js-fav-list"></section>
   </main>
   <script src="./js/main.js"></script>
