--- a/index.html
+++ b/index.html
@@ -5,24 +5,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TV shows search</title>
+  <title>Show seeker</title>
   <link rel="stylesheet" href="./styles/main.css">
 </head>
 
 <body>
-  <main>
-    <h1>TV show seeker</h1>
+  <main class="main">
+    <header>header stuf</header>
+    <h1>Show seeker</h1>
+    <p>Te has preguntado alguna vez, si existe una web o aplicación desde la que poder buscar tus series, añadirlas a
+      favoritas para tener un seguimiento de que has visto, o que queires ver y qué recoemndar? no te ha pasado que
+      quieres recomendar ESA serie a un amigo y no recuerdas su nombre? Con Show Eeeker no volverá a pasarte!</p>
     <form action="">
-      <input class="js-input-search" type="text" name="" id="" placeholder="Search a tv show">
+      <input class="js-input-search" type="text" placeholder="Search a tv show">
       <button class="js-btn-search">Buscar</button>
     </form>
-    <h2>Results:</h2>
-    <section class="js-form-list"></section>
-    <h2> You favourite TV shows:</h2>
-    <section class="js-fav-list"></section>
+    <div class="list-container">
+      <h2>Results:</h2>
+      <section class="js-form-list"></section>
+      <h2>You favourite shows:</h2>
+      <section class="js-fav-list"></section>
+    </div>
+    <footer>footer stuf</footer>
   </main>
   <script src="./js/main.js"></script>
 </body>
 
 </html>
-<img src="" alt="">
