--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Show seeker</h1>
     <p>Te has preguntado alguna vez, si existe una web o aplicación desde la que poder buscar tus series, añadirlas a
       favoritas para tener un seguimiento de que has visto, o que queires ver y qué recoemndar? no te ha pasado que
-      quieres recomendar ESA serie a un amigo y no recuerdas su nombre? Con Show Eeeker no volverá a pasarte!</p>
+      quieres recomendar ESA serie a un amigo y no recuerdas su nombre? Con Show Seeker no volverá a pasarte!</p>
     <form action="">
       <input class="js-input-search" type="text" placeholder="Search a tv show">
       <button class="js-btn-search">Buscar</button>
