finished reset button, cannot eliminate only one item from localStorage

--- a/index.html
+++ b/index.html
@@ -11,20 +11,28 @@
 
 <body>
   <main class="main">
-    <header>header stuf</header>
+    <header>header stuf
+      <!-- <div class="tenor-gif-embed" data-postid="4713516" data-share-method="host" data-aspect-ratio="1.22"
+        data-width="100%"><a href="https://tenor.com/view/movie-gif-4713516">Movie Projector GIF</a>from <a
+          href="https://tenor.com/search/movie-gifs">Movie GIFs</a></div>
+      <script type="text/javascript" async src="https://tenor.com/embed.js"></script> -->
+    </header>
     <h1>Show seeker</h1>
-    <p>Te has preguntado alguna vez, si existe una web o aplicación desde la que poder buscar tus series, añadirlas a
-      favoritas para tener un seguimiento de que has visto, o que queires ver y qué recoemndar? no te ha pasado que
-      quieres recomendar ESA serie a un amigo y no recuerdas su nombre? Con Show Seeker no volverá a pasarte!</p>
+    <p>Have you ever wondered, if there is a web or application from which you can search your series, add them to
+      favorites to keep track of what you’ve seen, or what you want to see and what to recomend? it hasn’t happened to
+      you that
+      you want to recommend THAT show to a friend and you don’t remember his name? With Show Seeker will not happen
+      again!</p>
     <form action="">
       <input class="js-input-search" type="text" placeholder="Search a tv show">
-      <button class="js-btn-search">Buscar</button>
+      <button class="js-btn-search">Search</button>
     </form>
     <div class="list-container">
       <h2>Results:</h2>
       <section class="js-form-list"></section>
       <h2>You favourite shows:</h2>
       <section class="js-fav-list"></section>
+      <button class="js-delete-fav">Erase all</button>
     </div>
     <footer>footer stuf</footer>
   </main>
