maded little changes

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,7 +15,7 @@
 <body>
   <main class="main">
     <include src="./partials/header.html"></include>
-    <include src="./partials/form.html"></include>
+    <include src="./partials/info.html"></include>
     <div class="list-container">
       <include src="./partials/resultList.html"></include>
       <include src="./partials/favoriteList.html"></include>
